# quickjs-rust-near

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE.md  README.md  build.rs  build.sh  buildanddeploy.sh  fixwasm.js  main.wasm  meta-dce.json  music.js  package-lock.json  package.json  playwright-video-merger.sh  runwasm.html  runwasm.js  test.sh  testnear.js  wrapper.h
.devcontainer/: devcontainer.json  install-dependencies.sh  post-create.sh
.github/workflows/: main.yml  near-rewards.yml  release-ai-proxy.yml  release-example-contracts.yml  test-aiproxy.yml  test-workflow-dispatch.yml
e2e/: e2e.test.js  music.test.js  musicscript.js
examples/aiproxy/: .gitignore  .test.env  README.md  create-refund-signing-keypair.js  playwright.config.js  rollup.config.js  spin.toml
examples/aiproxy/openai-proxy/: Cargo.toml
examples/aiproxy/openai-proxy/src/: bindings.rs  lib.rs
examples/aiproxy/playwright-tests/: aiproxy.spec.js  dynamic-tools.spec.js  metatransaction.spec.js  near_rpc.js  nearai.js  nearai.spec.js  nearairesponses.js  openaimockserver.js  tools.spec.js  util.js
examples/aiproxy/playwright-tests/openairesponsechunks/: handletoolcalll.txt  toolcall.txt
examples/aiproxy/tests/: Cargo.toml
examples/aiproxy/tests/src/: bindings.rs  lib.rs
examples/aiproxy/web/: contract-runner  index.html  main.js  package-lock.json  package.json
examples/aiproxy/web/near/: config.js
examples/aiproxy/web/nearai/: login.js
examples/aiproxy/web/openai/: chat-completion.js  chat-completion.test.js  javascriptsimulator.js  nearai.test.js  sandbox.js  tools.js  tools.test.js
examples/aiproxy/web/ui/: confirm-modal.js  progress-bar.js
examples/fungibletoken/: Cargo.toml  README.md  build.sh  meta-dce.json  test.sh
examples/fungibletoken/e2e/: aiconversation.js  aiconversation.test.js  e2e.test.js
examples/fungibletoken/src/: lib.rs
examples/minimumweb4/: Cargo.toml  README.md  build.sh  meta-dce.json  test.sh
examples/minimumweb4/src/: contract.js  lib.rs
examples/nft/: .gitignore  Cargo.toml  README.md  build.sh  buildanddeploy.sh  cargo.toml  meta-dce.json  post_quickjs_bytecode.sh  post_static_content.sh  test.sh
examples/nft/e2e/: e2e.test.js  lockedcontent.test.js  synthnft.test.js
examples/nft/localjstest/: burn.spec.js  burn.test.js
examples/nft/src/: contract.js  lib.rs  payouts.rs  web4content.rs
examples/nft/web4/: .gitignore  index.html  main.js  music.wasm  nearsocial.js  nftowners.json  ownersmain.js  ownerspage.html  rollup.config.js  serviceworker.js  socialwidget.html
examples/nft/web4/musicwasms/: fall.wasm  firstattempt.wasm  goodtimes.wasm  grooveisinthecode.wasm  noiseandmadness.wasm  shufflechill.wasm  wasmsong.wasm  wasmsummit2020.wasm  wasmsummit2021.wasm  webchipmusic.wasm
examples/purejs/: .gitignore  Cargo.toml  README.md  build.sh  callpurejswasm.js  manipulatepurejswat.js  meta-dce.json  purejs.wasm
examples/purejs/compiler/: quickjs.js  wasi.js
examples/purejs/localjstest/: purejs.spec.js  purejs.test.js
examples/purejs/src/: contract.js  lib.rs
factory/: README.md  min_self_upgrade_contract.wat
factory/minimumweb4/: .gitignore  Cargo.toml  build.rs
factory/minimumweb4/src/: lib.rs
factory/minimumweb4/tests/: test_factory.rs
localjstestenv/: README.md  contract-runner.js  prepare-wasm.js  wasm-near-environment.js
quickjslib/: .gitignore  README.md  build.sh  libjseval.c  package.json  wasmlib.c
quickjslib/js/: quickjs.js  quickjs.test.js  wasi.js
src/: jslib.rs  lib.rs  testenv.rs  viewaccesscontrol.rs  wasimock.rs  web4.rs
src/testenv/: testenv.rs
src/tests/: nearmock.rs  testenv.rs
src/web4/: types.rs  webappbundle.rs
testenv/: Cargo.toml  test.sh
testenv/src/: lib.rs  musicscript.rs  testenv.rs
wasi/: wasi.js
web4/: README.md  app.html.js  audioworkletprocessor.js  index.html  main.js  presentation.html  rollup.config.js  sample_music.js  sample_music2.js  slides.md  slidescontroller.js  style.css.js  synth.js
web4/audio/: audio.js  audiobuffertowav.js  audioworkletprocessor.js
web4/ui/: progressbar.js
web4/webassemblymusic/: musictemplate.js  musictemplate.test.js
