[package]
name = "quickjs-rust-near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.test]
opt-level = 0
overflow-checks = false

[profile.release]
lto = true

[dependencies]
near-sdk = "4.0.0"

[build-dependencies]
bindgen = "0.60.1"
