[package]
name = "quickjs-rust-near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[profile.release]
codegen-units = 1
lto = true
debug = false
opt-level = "z"

[dependencies]
near-sdk = "4.0.0"
lazy_static = "1.4.0"
ed25519-dalek = "1.0.1"
sha2 = "0.10.6"
hex = "0.4.3"
quickjs-rust-near-testenv = { path = "testenv" }

[build-dependencies]
bindgen = "0.60.1"

[features]
library = []

[workspace]
# remember to include a member for each contract
members = [
  "examples/nft",
  "testenv",
  "."
]