[package]
name = "quickjs-rust-near"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[profile.release]
codegen-units = 1
lto = true
debug = false
opt-level = "z"
strip="symbols"

[profile.release.package."quickjs-rust-near-purejs"]
strip = false

[dependencies]
near-sdk = "5.5.0"
ed25519-dalek = "2.1.1"
sha2 = "0.10.6"
hex = "0.4.3"
quickjs-rust-near-testenv = { path = "testenv" }

[build-dependencies]
bindgen = "0.60.1"

[features]
library = []

[workspace]
# remember to include a member for each contract
members = [
  "examples/fungibletoken",
  "examples/nft",
  "examples/minimumweb4",
  "examples/purejs",
  "testenv",
  "."
]
