[package]
name = "quickjs-rust-near-minimum-web4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
quickjs-rust-near = { path = "../../", features=["library"] }
quickjs-rust-near-testenv = { path = "../../testenv" }

[build-dependencies]
bindgen = "0.60.1"
