[package]
name = "quickjs-rust-near-purejs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"
quickjs-rust-near = { path = "../../", features=["library"] }
quickjs-rust-near-testenv = { path = "../../testenv" }

[build-dependencies]
bindgen = "0.60.1"
