[package]
name = "openai-proxy"
authors = ["Peter Salomonsen <pjsalomonsen@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.22.1"
bs58 = "0.5.1"
ed25519-dalek = "2.1.1"
futures = "0.3.31"
hex = "0.4.3"
serde = {version = "1.0.213", features = ["serde_derive"]}
serde_json = "1.0.128"
sha2 = "0.10.8"
spin-sdk = "3.0.1"
url = "2.5.2"

[workspace]
