[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-test-sdk = { git = "https://github.com/petersalomonsen/spin-test",  branch = "response-handler-func"  }
serde_json = "1.0.128"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
bs58 = "0.5.1"
sha2 = "0.10.8"

[workspace]
